TODO: blacklisted chars!!!!!! use it~!!!!!!!!
TODO: unimportant input to lowercase (so far this hasn't been important, but there might be something you missed)

TODO: recently discovered issue where some files listed show up as null; might wanna check that out without doing a second pass

1/31/2019
- Isaac discovers .list() and wonders why he didn't know of its existence until now
- stage 1 of 2 of FileProcessor overhaul
	note to self: ints and integers are immutable

1/28/2019
- motivated (pressured?) myself into picking it back up and making at _least_ 
the quizzing section viable with the coming wave of midterms soon to come
- crudely stapled a fix over the null/disappearing files bug for now to satiate my needs first


1/7/2019
- got rid of some dumb logic in ClassEditorScreen by changing AbstractOpenInputScreen in minor ways

1/4/2019
- more work on QuestionEditorScreen
- path to 1-2-y fixed
- more changes to accommodate for a input stopper 

1/3/2019
- minor bug in QuestionEditorScreen fixed
- coming to the realization that there doesn't need to be a separate 
key for ending the program and going to a previous screen

12/31/2018
- fixing up potential errors in name processing
- avoided invoking with a recursiveaction within a recursiveaction
- fixed more 1-2
- bugs fixed in ClassManagementScreen
- overhaul to avoid creating additional objects when going backwards

12/30/2018
- more bugs in paths 1-1 and 1-2 fixed
- new blacklisted names
- more bugs with intermittent adding questions in 1-2

12/29/2018
- picked up on bug on 1-3 path, where after deleting or creating a course, courses
are not added, due the way that it is implemented (so I added new methods to make 
up for that implementation)
- 1-4 path should also be relatively complete, where repeating prompt issues have been fixed
- paths 1-1 and 1-2 now account for whether the files actually exists (or not exist), 
and respond according